--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "stonerich",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://JohanAugustsson.github.io/Stone-Rich",
   "dependencies": {
     "font-awesome": "^4.7.0",
+    "gh-pages": "^1.1.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
@@ -15,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "redux-devtools": "^3.4.1"
